Complete baseline hardening
